# mega.io.py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/: HISTORY.md  USAGE.md
src/mega/: errors.py  mega.py
src/tests/: test_mega.py  test_unit.py
